--- a/.github/workflows/images.yaml
+++ b/.github/workflows/images.yaml
@@ -102,7 +102,7 @@ jobs:
               IMAGE_NAMESPACE=${{ github.repository }} \
               PLATFORM=${{ matrix.platform }}/${{ matrix.arch }} \
               IMAGE_REGISTRY=${{ vars.ACR_NAME }}  \
-              YEAR=${{ matrix.year }} \
+              WINDOWS_YEARS=${{ matrix.year }} \
               BUILDX_ACTION=--push
           else
             make retina-image-win \
@@ -163,7 +163,7 @@ jobs:
           IS_MERGE_GROUP: ${{ github.event_name == 'merge_group' }}
 
   manifests:
-    if: ${{ github.event_name == 'merge_group' && success('retina-images') && success('retina-win-images') && success('operator-images')}}
+    if: ${{ github.event_name == 'merge_group' && success('retina-images') && success('retina-win-images') && success('operator-images')}} 
     name: Generate Manifests
     runs-on: ubuntu-latest
     needs: [retina-images, retina-win-images, operator-images]
@@ -225,5 +225,4 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          export AZURE_SUBSCRIPTION_ID=${{ secrets.AZURE_SUBSCRIPTION }}
-          go test -v ./test/e2e/scenarios/retina/*.go -timeout 30m -tags=e2e -count=1  -args -image-tag=$(make version) -image-registry=${{ vars.ACR_NAME }}  -image-namespace=${{ github.repository}}
+          go test -v ./test/e2e/*.go -timeout 30m -tags=e2e -count=1  -args -image-tag=$(make version) -image-registry=${{ vars.ACR_NAME }}  -image-namespace=${{ github.repository}}
