--- a/.github/workflows/kapinger.yaml
+++ b/.github/workflows/kapinger.yaml
@@ -23,10 +23,26 @@ jobs:
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker images
+      - name: Build and push Windows image
+        uses: docker/build-push-action@v2
+        with:
+          context: /hack/tools/kapinger
+          file: ./hack/tools/kapinger/Dockerfile.windows
+          platforms: windows/amd64
+          push: true
+          tags: ghcr.io/microsoft/retina/kapinger:windows-${{ github.sha }}
+
+      - name: Build and push Linux image
         uses: docker/build-push-action@v2
         with:
           context: ./hack/tools/kapinger
           file: ./hack/tools/kapinger/Dockerfile
+          platforms: linux/amd64
           push: true
-          tags: ghcr.io/${{ github.repository }}/kapinger:latest
+          tags: ghcr.io/microsoft/retina/kapinger:linux-${{ github.sha }}
+
+      - name: Create and push manifest
+        id: docker_manifest
+        run: |
+          docker manifest create ghcr.io/microsoft/retina/kapinger:latest ghcr.io/microsoft/retina/kapinger:windows-${{ github.sha }} ghcr.io/microsoft/retina/kapinger:linux-${{ github.sha }}
+          docker manifest push ghcr.io/microsoft/retina/kapinger:latest
