--- a/hack/tools/kapinger/Dockerfile.windows
+++ b/hack/tools/kapinger/Dockerfile.windows
@@ -1,7 +1,7 @@
 FROM --platform=linux/amd64 mcr.microsoft.com/oss/go/microsoft/golang:1.21 AS builder
 
-WORKDIR /app
-COPY ./hack/tools .
+WORKDIR /build
+COPY . .
 ENV GOOS=windows
 ENV GOARCH=amd64 
 
@@ -11,6 +11,6 @@ RUN go mod download
 RUN CGO_ENABLED=0 go build -o kapinger.exe ./kapinger
 
 FROM  mcr.microsoft.com/windows/nanoserver:ltsc2022
-WORKDIR /app
-COPY --from=builder /app/kapinger.exe .
+WORKDIR /build
+COPY --from=builder /build/kapinger.exe .
 CMD ["kapinger.exe"]
