--- a/.github/workflows/kapinger.yaml
+++ b/.github/workflows/kapinger.yaml
@@ -13,36 +13,24 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Windows image
-        uses: docker/build-push-action@v2
-        with:
-          context: hack/tools/kapinger
-          file: hack/tools/kapinger/Dockerfile.windows
-          platforms: windows/amd64
-          push: true
-          tags: ghcr.io/${{ github.repository }}/kapinger:windows-${{ github.sha }}
-
       - name: Build and push Linux image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: hack/tools/kapinger
           file: hack/tools/kapinger/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ghcr.io/${{ github.repository }}/kapinger:linux-${{ github.sha }}
-
-      - name: Create and push manifest
-        id: docker_manifest
-        run: |
-          docker manifest create ghcr.io/${{ github.repository }}/kapinger:latest ghcr.io/${{ github.repository }}/kapinger:windows-${{ github.sha }} ghcr.io/${{ github.repository }}/kapinger:linux-${{ github.sha }}
-          docker manifest push ghcr.io/${{ github.repository }}/kapinger:latest
+          tags: ghcr.io/${{ github.repository }}/kapinger:latest
