--- a/deploy/standard/manifests/controller/helm/retina/templates/daemonset.yaml
+++ b/deploy/standard/manifests/controller/helm/retina/templates/daemonset.yaml
@@ -168,8 +168,6 @@ metadata:
   name: {{ .Values.agent_win.name }}
   namespace: {{ .Values.namespace }}
   annotations:
-    prometheus.io/port: "{{ .Values.retinaPort }}"
-    prometheus.io/scrape: "true"
     checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
 spec:
   selector:
@@ -182,8 +180,10 @@ spec:
         {{- include "retina.labels" . | nindent 8 }}
         app.kubernetes.io/component: workload
         k8s-app: {{ include "retina.name" . }}
-      name: {{ include "retina.name" . }}
-      namespace: {{ .Values.namespace }}
+      annotations:
+        prometheus.io/port: "{{ .Values.retinaPort }}"
+        prometheus.io/scrape: "true"
+        checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
       {{- if .Values.priorityClassName }}
